# lucid-component-ndi

./: Makefile  pyproject.toml
.claude/: settings.local.json
docs/: README.md
docs/superpowers/plans/: 2026-03-23-ndi-component.md  2026-05-02-restart-on-busy.md  lucid-component-ndi.code-workspace
docs/superpowers/specs/: 2026-05-02-restart-on-busy-design.md
src/lucid_component_ndi/: __init__.py  component.py  helper_client.py  helper_installer.py  helper_server.py
src/lucid_component_ndi/systemd/: lucid-ndi-helper.service
tests/: test_contract.py  test_helper_server.py
