[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucid-component-ndi"
dynamic = ["version"]
description = "LUCID component for NDI video stream control via yuri_simple on Raspberry Pi."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "LUCID" }]
dependencies = [
  "lucid-component-base @ git+https://github.com/LucidLabPlatform/lucid-component-base@v2.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
lucid-ndi-helper = "lucid_component_ndi.helper_server:main"
lucid-ndi-helper-installer = "lucid_component_ndi.helper_installer:main"

[project.entry-points."lucid_components"]
ndi = "lucid_component_ndi.component:NDIComponent"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lucid_component_ndi*"]

[tool.setuptools.package-data]
lucid_component_ndi = ["systemd/*.service"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
